<resources>
    <string name="app_name">Wilson</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">johndoe@gmail.com</string>
    <string name="nav_header_desc">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_wallent">Wallent(KES 0.00)</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_ride_history">My Ride History</string>
    <string name="menu_corporate">Corporate</string>
    <string name="menu_shuttle">Shuttle</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_drivers">Driver</string>
    <string name="title_activity_main">Wilson</string>
</resources>
